<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_view"
        android:icon="@drawable/ic_action_calendar_month"
        android:showAsAction="always"
        android:title="@string/week"/>
    <item
        android:id="@+id/menu_download"
        android:icon="@drawable/ic_action_download"
        android:showAsAction="always"
        android:title="@string/download">
        <menu>
            <item
                android:id="@+id/menu_fk07"
                android:showAsAction="always"
                android:title="@string/fk07"/>
            <item
                android:id="@+id/menu_fk10"
                android:showAsAction="always"
                android:title="@string/fk10"/>
        </menu>
    </item>

</menu>