<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView 
        android:id="@+id/presenceTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/presenceTitle"
        android:textSize="20sp"
        android:textColor="#000000"
        android:textStyle="bold"/>

    <ListView
        android:id="@+id/presenceListView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="1"/>
    
    <TextView 
        android:id="@+id/presencePhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:autoLink="phone"
        android:text="@string/presencePhone"
        android:textColor="#000000"
        android:textSize="15sp" />
    
    <TextView 
        android:id="@+id/presenceMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:autoLink="email"
        android:text="@string/presenceMail"
        android:textColor="#000000"
        android:textSize="15sp" />

</LinearLayout>
