<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView 
        android:id="@+id/presenceTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/presenceTitle"
        android:textSize="20sp"
        android:textColor="#000000"
        android:textStyle="bold"/>
    
    <TextView 
        android:id="@+id/presenceEmpty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="15dp"
        android:visibility="invisible"
        android:gravity="center"
        android:text="@string/presenceEmpty"
        android:textColor="#000000"
        android:textSize="15sp" />
    
    <ListView 
        android:id="@+id/presenceListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_below="@id/presenceTitle"
        android:layout_above="@+id/presencePhone" />
    
    <TextView 
        android:id="@id/presencePhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/presenceMail"
        android:autoLink="phone"
        android:text="@string/presencePhone"
        android:textColor="#000000"
        android:textSize="15sp" />
    
    <TextView 
        android:id="@id/presenceMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:autoLink="email"
        android:text="@string/presenceMail"
        android:textColor="#000000"
        android:textSize="15sp" />

</RelativeLayout>
